making changes from a new branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>example heading</h1>
     <h2>adding more code from another computer</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At asperiores eaque quos voluptate tenetur iure ullam quaerat optio consequatur nihil, quod maiores, facilis, minima molestiae in alias veniam. Facilis, officia?</p>
 </body>
 </html>
